--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏠 Residence Timeline Viewer</h1>
+            <h1>🏠 Buildings Timeline Viewer</h1>
 				<h3>Upload a CSV file to visualize residence timelines with color-coded categories</h3>
             
             <div class="instructions">
